font_variation_settings commit_hash:e965ebcaa65a6d7f4f3f5d499f7e816dc95c4d3f

--- a/client/web/divkit/src/components/tabs/Tabs.module.css
+++ b/client/web/divkit/src/components/tabs/Tabs.module.css
@@ -39,6 +39,7 @@
     letter-spacing: var(--divkit-tabs-letter-spacing, 0);
     font-weight: var(--divkit-tabs-inactive-font-weight, 400);
     font-family: var(--divkit-tabs-inactive-font-family, inherit);
+    font-variation-settings: var(--divkit-tabs-inactive-font-variation-settings, inherit);
     border-radius: var(--divkit-tabs-border-radius, 100em);
     cursor: pointer;
     user-select: none;
@@ -57,6 +58,7 @@
     cursor: default;
     font-weight: var(--divkit-tabs-active-font-weight, 400);
     font-family: var(--divkit-tabs-active-font-family, inherit);
+    font-variation-settings: var(--divkit-tabs-active-font-variation-settings, inherit);
 }
 
 .tabs_animation_fade .tabs__item_selected,
