--- a/client/web/divkit/src/components/utilities/Outer.module.css
+++ b/client/web/divkit/src/components/utilities/Outer.module.css
@@ -1,4 +1,4 @@
-@value outer from "../Cls.module.css";
+@value outer, outer_width_content, outer_height_content from "../Cls.module.css";
 @value root__clickable, root__clickable-no-transition from "../Cls.module.css";
 
 .outer {
