Better image layout commit_hash:10aec3702aa0f8e0593375faf9ed3e91b1ca5b9e

--- a/client/web/divkit/src/components/image/Image.module.css
+++ b/client/web/divkit/src/components/image/Image.module.css
@@ -37,23 +37,8 @@
     transform: scale(-1, 1);
 }
 
-.image__aspect-wrapper {
-    position: relative;
-    display: block;
-}
-
-.image_aspect-content .image__aspect-wrapper {
-    display: grid;
-    height: 0;
-    align-content: center;
-}
-
-.image_aspect-content.image_aspect-valign_top .image__aspect-wrapper {
-    align-content: start;
-}
-
-.image_aspect-content.image_aspect-valign_bottom .image__aspect-wrapper {
-    align-content: end;
+.image_aspect {
+    display: flex;
 }
 
 .image_aspect:not(.image_aspect-content) .image__image {
